changed Barks documentation for upstream

--- a/_ECHO/Code docs/Документация по баркам.md
+++ b/_ECHO/Code docs/Документация по баркам.md
@@ -226,7 +226,7 @@ public sealed class TransformSpeakerBarkEvent : EntityEventArgs, IInventoryRelay
 
 **Что это:** Локальное событие, которое позволяет предметам менять барк говорящего.
 
-**Зачем нужно:** Маска голоса может менять не только имя, но и барк. Это событие происходит через инвентарь (благодаря `IInventoryRelayEvent`), и маска голоса берет его и подменяет данные.
+**Зачем нужно:** Голосовая маска может менять не только имя, но и барк. Это событие происходит через инвентарь (благодаря `IInventoryRelayEvent`), и голосовая маска берет его и подменяет данные.
 
 **Поля:**
 - `Sender` — кто говорит.
@@ -760,11 +760,56 @@ private void OnBarkSelected(string barkId)
 }
 ```
 
-Каждый обработчик вызывает соответствующий `SetBark*()` метод (определён в основном файле `HumanoidProfileEditor.xaml.cs`), а затем `UpdateSaveButton()` для активации кнопки сохранения.
+Каждый обработчик вызывает соответствующий `SetBark*()` метод (определён в [HumanoidProfileEditor.Barks.cs](Content.Client/_ECHO/Barks/UI/HumanoidProfileEditor.Barks.cs)), а затем `UpdateSaveButton()` для активации кнопки сохранения.
 
 #### UpdateBarkVoicesControls()
 
 Вызывается при загрузке/сбросе профиля. Обновляет текст на кнопке и состояние BarkTab (если окно открыто).
+
+#### Set-методы (в HumanoidProfileEditor.Barks.cs)
+
+```csharp
+private void SetBarkProto(string prototype)
+{
+    Profile = Profile?.WithBarkProto(prototype);
+    ReloadPreview();
+    SetDirty();
+}
+
+private void SetBarkPitch(float pitch)
+{
+    Profile = Profile?.WithBarkPitch(Math.Clamp(pitch,
+        _cfgManager.GetCVar(UCCVars.BarksMinPitch),
+        _cfgManager.GetCVar(UCCVars.BarksMaxPitch)));
+    ReloadPreview();
+    SetDirty();
+}
+
+private void SetBarkMinVariation(float variation)
+{
+    Profile = Profile?.WithBarkMinVariation(Math.Clamp(variation,
+        _cfgManager.GetCVar(UCCVars.BarksMinDelay),
+        Profile!.Bark.MaxVar));
+    ReloadPreview();
+    SetDirty();
+}
+
+private void SetBarkMaxVariation(float variation)
+{
+    Profile = Profile?.WithBarkMaxVariation(Math.Clamp(variation,
+        Profile!.Bark.MinVar,
+        _cfgManager.GetCVar(UCCVars.BarksMaxDelay)));
+    ReloadPreview();
+    SetDirty();
+}
+```
+
+Каждый метод:
+1. Создаёт новый профиль с изменённым параметром (иммутабельность).
+2. `ReloadPreview()` — обновляет 3D-модель персонажа в предпросмотре.
+3. `SetDirty()` — помечает профиль как «изменённый» (чтобы активировать кнопку «Сохранить»).
+
+**Clamp-валидация:** Питч зажимается между `BarksMinPitch` и `BarksMaxPitch`. Задержки валидируются так: MinVar не может быть больше MaxVar и наоборот.
 
 ---
 
@@ -835,7 +880,13 @@ public HumanoidCharacterProfile WithBarkMaxVariation(float variation) => new(thi
 
 ### 3. Content.Client/Lobby/UI/HumanoidProfileEditor.xaml.cs
 
-#### Инициализация (в конструкторе, ~строка 250)
+**Примечание:** После апстрима многие методы были вынесены в partial-файлы:
+- `SetAge()`, `SetSex()`, `SetGender()`, `SetSpecies()`, `SetSpawnPriority()` → [HumanoidProfileEditor.Appearance.cs](Content.Client/Lobby/UI/HumanoidProfileEditor.Appearance.cs)
+- `SetName()`, `UpdateNameEdit()` → [HumanoidProfileEditor.BasicInfo.cs](Content.Client/Lobby/UI/HumanoidProfileEditor.BasicInfo.cs)
+- `UpdateSexControls()`, `UpdateSkinColor()`, `UpdateEyePickers()` и др. Update-методы → [HumanoidProfileEditor.Appearance.cs](Content.Client/Lobby/UI/HumanoidProfileEditor.Appearance.cs)
+- Bark-методы (`SetBarkProto()`, `SetBarkPitch()` и т.д.) → [HumanoidProfileEditor.Barks.cs](Content.Client/_ECHO/Barks/UI/HumanoidProfileEditor.Barks.cs)
+
+#### Инициализация 
 ```csharp
 if (configurationManager.GetCVar(UCCVars.BarksEnabled))
 {
@@ -845,42 +896,17 @@ if (configurationManager.GetCVar(UCCVars.BarksEnabled))
 ```
 Показывает контейнер барков и вызывает `InitializeBarks()` из partial class.
 
-#### Обновление при загрузке профиля (~строка 670)
+#### Обновление при загрузке профиля 
 ```csharp
 UpdateBarkVoicesControls(); // ECHO-Tweak : Barks
 ```
 При установке/сбросе профиля через `SetProfile()` обновляет UI барков.
 
-#### Set-методы (~строки 1080-1110)
-
-```csharp
-private void SetBarkProto(string prototype)
-{
-    Profile = Profile?.WithBarkProto(prototype);
-    ReloadPreview();
-    SetDirty();
-}
-
-private void SetBarkPitch(float pitch)
-{
-    Profile = Profile?.WithBarkPitch(Math.Clamp(pitch,
-        _cfgManager.GetCVar(UCCVars.BarksMinPitch),
-        _cfgManager.GetCVar(UCCVars.BarksMaxPitch)));
-    ReloadPreview();
-    SetDirty();
-}
-```
-
-Каждый метод:
-1. Создаёт новый профиль с изменённым параметром (иммутабельность).
-2. `ReloadPreview()` — обновляет 3D-модель персонажа в предпросмотре.
-3. `SetDirty()` — помечает профиль как «изменённый» (чтобы активировать кнопку «Сохранить»).
-
-**Clamp-валидация:** Питч зажимается между `BarksMinPitch` и `BarksMaxPitch`. Задержки валидируются так: MinVar не может быть больше MaxVar и наоборот.
-
 ---
 
-### 4. Content.Server.Database/Model.cs
+## <span style="color:#FF9966">Изменения в существующих файлах</span>
+
+### 1. Content.Shared/Preferences/HumanoidCharacterProfile.cs
 
 ```csharp
 // ECHO-Tweak : Barks
@@ -895,15 +921,9 @@ public float HighBarkVar { get; set; } = 0.5f;
 
 ---
 
-### 5. Content.Server/Database/ServerDbBase.cs
+### 6. Content.Server/Database/ServerDbBase.cs
 
-#### Чтение из БД:
-```csharp
-new BarkData(profile.BarkProto, profile.BarkPitch, profile.LowBarkVar, profile.HighBarkVar)
-```
-При загрузке профиля из базы данных создаётся объект `BarkData` с сохранёнными значениями.
-
-#### Запись в БД:
+#### Запись в БД (метод ConvertProfiles):
 ```csharp
 profile.BarkProto = humanoid.Bark.Proto;
 profile.BarkPitch = humanoid.Bark.Pitch;
@@ -914,7 +934,7 @@ profile.HighBarkVar = humanoid.Bark.MaxVar;
 
 ---
 
-### 6. Content.Shared/Humanoid/HumanoidProfileSystem.cs
+### 7. Content.Shared/Humanoid/HumanoidProfileSystem.cs
 
 ```csharp
 [Dependency] private readonly SharedSpeechBarksSystem _barks = default!;
@@ -929,15 +949,13 @@ _barks.SetBarkData(ent, profile.Bark);
 
 ---
 
-### 7. Content.Server/VoiceMask/VoiceMaskSystem.cs
+### 8. Content.Server/VoiceMask/VoiceMaskSystem.cs
 
-Строка ~57:
 ```csharp
 InitializeBarks(); // ECHO-Tweak : Barks
 ```
 Вызывается в `Initialize()` основного класса, инициализирует подписки из `VoiceMaskSystem.Barks.cs`.
 
-Строка ~195 (UpdateUI):
 ```csharp
 new VoiceMaskBuiState(..., entity.Comp.BarkId, entity.Comp.BarkPitch)
 ```
@@ -945,7 +963,7 @@ new VoiceMaskBuiState(..., entity.Comp.BarkId, entity.Comp.BarkPitch)
 
 ---
 
-### 8. Content.Server/VoiceMask/VoiceMaskComponent.cs
+### 9. Content.Shared/VoiceMask/VoiceMaskComponent.cs
 
 ```csharp
 [DataField, ViewVariables(VVAccess.ReadWrite)]
@@ -955,11 +973,14 @@ public string BarkId = "Human1";
 public float BarkPitch = 1f;
 ```
 
-Голосовая маска хранит свои настройки барка отдельно от персонажа.
+Голосовая маска хранит свои настройки барка отдельно от персонажа. Также после апстрима добавлено новое поле:
+```csharp
+public bool ChangeIDName = false;  // Изменять ли имя на Agent ID
+```
 
 ---
 
-### 9. Content.Server/Speech/EntitySystems/VoiceOverrideSystem.cs
+### 10. Content.Server/Speech/EntitySystems/VoiceOverrideSystem.cs
 
 ```csharp
 InitializeBarks(); // ECHO-Tweak : Barks
@@ -969,7 +990,7 @@ InitializeBarks(); // ECHO-Tweak : Barks
 
 ---
 
-### 10. Content.Server/Speech/Components/VoiceOverrideComponent.cs
+### 11. Content.Server/Speech/Components/VoiceOverrideComponent.cs
 
 ```csharp
 [DataField]
@@ -980,7 +1001,7 @@ public BarkData? Bark;
 
 ---
 
-### 11. Content.Shared/VoiceMask/SharedVoiceMaskSystem.cs
+### 12. Content.Shared/VoiceMask/SharedVoiceMaskSystem.cs
 
 Добавлены поля `Bark` и `Pitch` в `VoiceMaskBuiState`, чтобы UI маски голоса мог отображать текущие настройки барка.
 
@@ -1127,7 +1148,7 @@ cvar barks.volume 1.0             -- громкость барков
 
 ### Как добавить новый барк?
 
-1. Положите звуковой файл (.ogg) в `Resources/Audio/_ECHO/Barks/`.
+1. Положите звуковой файл (.ogg) в `Resources/Audio/_ECHO/Barks/`. **Важно:** файл должен быть в формате **Mono** (одноканальный), а не Stereo. Это требование движка для позиционного аудио.
 2. Добавьте прототип в `Resources/Prototypes/_ECHO/Barks/roundstart.yml`:
 ```yaml
 - type: speechBark
