redacted welding documentation

--- a/_ECHO/Code docs/Документация по анимациям сварки.md
+++ b/_ECHO/Code docs/Документация по анимациям сварки.md
@@ -204,13 +204,14 @@ public sealed partial class WeldingSparksAnimationComponent : Component
 
 **Примеры из YAML:**
 
-| Сущность        | StartingOffset | EndingOffset            | Результат                      |
-|-----------------|--------------|---------------------------|--------------------------------|
-| Airlock         | `0, 0.5`     | *(не задан → `0, -0.5`)*  | Искры идут сверху вниз         |
-| AirlockExternal | `-0.5, 0`    | *(не задан → `0.5, 0`)*   | Искры идут слева направо       |
-| AirlockShuttle  | `-0.5, -0.2` | *(не задан → `0.5, 0.2`)* | Искры идут по диагонали        |
-| BaseShutter     | `-0.5, -0.5` | `0.5, -0.5`               | Искры идут горизонтально внизу |
-| FirelockEdge    | `0, -0.2`    | `0, -0.5`                 | Искры идут вниз в нижней части |
+| Сущность        | StartingOffset | EndingOffset              | Результат                      |
+|-----------------|----------------|---------------------------|--------------------------------|
+| Airlock         | `0, 0.5`       | *(не задан → `0, -0.5`)*  | Искры идут сверху вниз         |
+| AirlockExternal | `-0.5, 0`      | *(не задан → `0.5, 0`)*   | Искры идут слева направо       |
+| AirlockShuttle  | `-0.5, -0.2`   | *(не задан → `0.5, 0.2`)* | Искры идут по диагонали        |
+| BaseShutter     | `-0.5, -0.5`   | `0.5, -0.5`               | Искры идут горизонтально внизу |
+| FirelockEdge    | `0, -0.2`      | `0, -0.5`                 | Искры идут вниз в нижней части |
+| Walls           | `0, 0`         | `0, 0`                    | Искры никуда не идут (статичны)|
 
 ---
 
